--- a/kubernetes/seq-deployment.yaml
+++ b/kubernetes/seq-deployment.yaml
@@ -1,43 +1,46 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: adminer
+  name: seq
   labels:
     app: holefeeder
 spec:
   ports:
     - port: 80
-      targetPort: 8080
+      targetPort: 80
   selector:
     app: holefeeder
-    tier: frontend
+    tier: logging
   type: ClusterIP
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: adminer
+  name: seq
   labels:
     app: holefeeder
 spec:
   selector:
     matchLabels:
       app: holefeeder
-      tier: frontend
+      tier: logging
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
         app: holefeeder
-        tier: frontend
+        tier: logging
     spec:
       containers:
-      - image: adminer:4.8.1
-        name: adminer
+      - image: datalust/seq:latest
+        name: seq
+        env:
+        - name: ACCEPT_EULA
+          value: 'Y'
         ports:
-        - containerPort: 8080
-          name: adminer
+        - containerPort: 80
+          name: seq
         resources:
           requests:
             memory: 64Mi
